Make sure the feedbackify widget doesn't overlap the site content

--- a/avocet/css/avocet.base.css
+++ b/avocet/css/avocet.base.css
@@ -135,6 +135,16 @@ body {
     max-width: 822px;
 }
 
+@media (max-width: 1024px) {
+    .oa-feedbackify .container {
+        padding-left: 45px;
+    }
+
+    .oa-feedbackify .oa-content-container {
+        padding-left: 0;
+    }
+}
+
 /************************
  ** Highlighted panels **
  ************************/
